fixed reactiveness of the contact from on smaller screens

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -362,7 +362,7 @@ and (max-width: 768px) {
     margin-bottom: 2rem;
   }
 
-  form {
+  #contact form {
     max-width: 100%;
   }
 
